--- a/block-BHaaci/stylesheet/style.css
+++ b/block-BHaaci/stylesheet/style.css
@@ -57,7 +57,6 @@ body{
     font-size: 16px;
     line-height: 1.5;
     background: url(../assets/bg-intro-desktop.png), linear-gradient(rgba(254, 132, 132, 1),rgba(254, 132, 132, 1));
-    color: white;
 }
 
 
@@ -72,24 +71,26 @@ body{
     align-items: center;
 }
 
-
+strong{
+    font-weight: 700;
+}
 .box{
     width: 100%;
     background-color: #5d54a3;
     padding: 20px;
     border-radius: 8px;
+    text-align: center;
+    color: white;
+    border-bottom: 6px solid rgb(0, 0, 0, 0.5);
 }
-.border-bottom{
-    width: 100%;
-    margin-bottom: 10px;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-    height: 10px;
-    background-color: rgba(168, 135, 135, 0.8);
-}
+
 
 .col1{
     width: 40%;
+}
+main{
+    display: flex;
+    align-items: center;
 }
 
 
@@ -97,39 +98,56 @@ h1{
     font-size: 50px;
     font-weight: 800;
     padding-bottom: 10px;
+    color: white;
+}
+p{
+    font-size: 12px;
+    color: white;
 }
 
-fieldset{
+form{
     background-color: white;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 30px;
     padding: 30px 10px;
     border-radius: 8px;
+    box-shadow: 0 6px rgba(129, 128, 128, 0.8);
 }
 .demoform{
-    display: flex;
+    display: inline-block;
     width: 100%;
     margin: 10px 0;
     padding: 10px;
     border-radius: 8px;
-    border: rgb(92, 91, 91);
+    border: 1px solid rgb(179, 179, 179);
 }
 .demoform:focus{
-    border-color: black;
+    border-color: rgb(77, 75, 75);
 }
-button{
+.button{
     background-color: #37cc8a;
     text-transform: capitalize;
     color: white;
     padding: 10px;
-    display: flex;
+    display: inline-block;
     width: 100%;
     margin: 10px 0;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    border: 0;
+    box-shadow: none;
 }
-
+form p{
+    color: rgba(129, 128, 128, 0.8);
+    font-size: 8px;
+    text-align: center;
+}
+form p a{
+    text-decoration: none;
+    color: rgba(254, 132, 132, 1);
+    font-weight: 600;
+}
 
 
 
